# I.S.A.A.C

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SETUP.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
sandbox_image/: Dockerfile  entrypoint.sh  requirements.txt
sandbox_image_ui/: Dockerfile  entrypoint_ui.sh  requirements.txt
skills/: _index.json
skills/.chromadb/: chroma.sqlite3
src/isaac/: __init__.py  __main__.py  cli.py
src/isaac/arc/: __init__.py  analogy.py  dsl.py  evaluator.py  grid_ops.py  object_synthesis.py  priors.py  refinement.py  solver.py
src/isaac/background/: __init__.py  cron_engine.py
src/isaac/config/: __init__.py  settings.py
src/isaac/core/: __init__.py  graph.py  state.py  telemetry.py  transitions.py
src/isaac/identity/: __init__.py  soul.py
src/isaac/improvement/: __init__.py  engine.py  performance.py  prompt_evolution.py  self_critique.py  skill_curation.py
src/isaac/interfaces/: __init__.py  repl.py  telegram_gateway.py  terminal_ui.py  voice_repl.py
src/isaac/llm/: __init__.py  multimodal_router.py  prompts.py  provider.py  router.py
src/isaac/llm/providers/: __init__.py  anthropic.py  llamacpp.py  ollama.py  openai.py  openai_compat.py
src/isaac/memory/: __init__.py  context_manager.py  episodic.py  long_term.py  manager.py  procedural.py  semantic.py  skill_library.py  user_profile.py  world_model.py  world_model_kg.py
src/isaac/multimodal/: __init__.py  input.py
src/isaac/multimodal/vision/: __init__.py  screen_capture.py  vision_lm.py
src/isaac/multimodal/voice/: __init__.py  audio_io.py  stt.py  tts.py
src/isaac/nodes/: __init__.py  approval.py  classifier.py  computer_use.py  connector_execution.py  direct_response.py  explorer.py  got_planner.py  guard.py  perception.py  planner.py  refinement.py  reflection.py  sandbox.py  skill_abstraction.py  synthesis.py
src/isaac/sandbox/: __init__.py  executor.py  manager.py  security.py  ui_executor.py
src/isaac/scheduler/: __init__.py  heartbeat.py
src/isaac/security/: __init__.py  audit.py  capabilities.py  sanitizer.py
src/isaac/skills/: __init__.py
src/isaac/skills/connectors/: __init__.py  base.py  calendar.py  email_reader.py  filesystem.py  github.py  obsidian.py  registry.py  shell.py  web_fetch.py  web_search.py
src/isaac/tools/: __init__.py  base.py  browser.py  calendar.py  code.py  email.py  file.py  search.py
tests/: conftest.py  test_connectors.py  test_cron_engine.py  test_graph.py  test_identity.py  test_long_term_memory.py  test_state.py
tests/fixtures/arc_tasks/: sample_tasks.json
tests/test_arc/: test_dsl.py  test_evaluator.py  test_grid_ops.py
tests/test_llm/: test_provider.py  test_router.py
tests/test_memory/: test_context_manager.py  test_episodic.py  test_semantic.py  test_skill_library.py  test_world_model_kg.py
tests/test_nodes/: test_computer_use.py  test_got_planner.py  test_guard.py  test_perception.py  test_planner.py  test_reflection.py  test_sandbox.py  test_skill_abstraction.py  test_synthesis.py
tests/test_sandbox/: test_manager.py  test_security.py
tests/test_security/: test_audit.py  test_capabilities.py  test_sanitizer.py
tests/test_tools/: test_base.py
